--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+
+I forked the repo, fixed some issues and added some missing hex codes.
+I only have a ti84+, so I don't know if this works with anything else (100% not all hex codes will work on ti83).
+
+==========
+========== Old description
+==========
+
 == The TI-BASIC Compiler
 
 The TI-BASIC Compiler is all about compiling TI-BASIC code on your computer
